--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@ layout: page
 title: Home
 ---
 
-<p>Welcome to Tamriel Unlimited Gaming!</p>
+<h3>Welcome to The Elder Scrolls Reborn!</h3>
+<p>Below you will find links to the rules and guides for getting started here.</p>
+<ol class="c">
+<li><a href="rules.html">Rules</a></li>
+</ol>
