Mr Hyde was here …

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Home
 ---
 
 <h3>Welcome to The Elder Scrolls Reborn!</h3>
+<p>Updates to site, channel, and lore can be found in our <a href="blog.html">Blog</a>.</p>
 <p>Below you will find links to the rules and guides for getting started here.</p>
 <ol class="c">
 <li><a href="rules.html">Rules</a></li>
